v.0.2.1 api modify & add module
